[package]
name = "blokchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="mylib"
path="src/lib.rs"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha256 = "1.0.3"